--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "make:cg": "tsx scripts/export-cg-bot.ts",
     "tourney:smoke": "pnpm -C packages/sim-runner start tourney --bots greedy,random,evolved --seeds 20 --save-dir ../../viewer/public/replays/tourney",
     "viewer": "pnpm -C packages/viewer dev",
-    "release:cg": "scripts/release-cg-bot.sh"
+    "release:cg": "scripts/release-cg-bot.sh",
+    "elo:inspect": "tsx scripts/elo-inspect.ts",
+    "elo:inspect:explore": "PFSP_TARGET=0.5 PFSP_TEMP=0.2 tsx scripts/elo-inspect.ts"
   },
   "devDependencies": {
     "tsx": "^4.20.4",
