--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,5 +5,12 @@
   "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
+  },
+  "devDependencies": {
+    "tsx": "^4.20.4",
+    "typescript": "^5.5.4"
+  },
+  "scripts": {
+    "test": "tsx --test src/*.test.ts"
   }
 }
