test: add initGame bounds test

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -8,5 +8,12 @@
   },
   "dependencies": {
     "@busters/shared": "workspace:*"
+  },
+  "devDependencies": {
+    "tsx": "^4.20.4",
+    "typescript": "^5.5.4"
+  },
+  "scripts": {
+    "test": "tsx --test src/*.test.ts"
   }
 }
