--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -17,10 +17,13 @@
     "./hof": "./hof.ts"
   },
   "devDependencies": {
-    "esbuild": "^0.25.9"
+    "esbuild": "^0.25.9",
+    "tsx": "^4.20.4",
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "echo \"@busters/agents: nothing to build\"",
-    "build:cg": "esbuild cg-adapter.ts --bundle --format=iife --target=es2019 --outfile=dist/hybrid-cg.js"
+    "build:cg": "esbuild cg-adapter.ts --bundle --format=iife --target=es2019 --outfile=dist/hybrid-cg.js",
+    "test": "tsx --test *.test.ts"
   }
 }
