--- a/packages/agents/package.json
+++ b/packages/agents/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "build": "echo \"@busters/agents: nothing to build\"",
     "build:cg": "esbuild cg-adapter.ts --bundle --format=iife --target=es2019 --outfile=dist/hybrid-cg.js",
-    "test": "tsx --test *.test.ts"
+    "bench:act": "tsx bench-act.ts",
+    "test": "tsx --test *.test.ts && pnpm bench:act"
   }
 }
