feat(sim-runner): parallelize weight evaluation

--- a/packages/sim-runner/package.json
+++ b/packages/sim-runner/package.json
@@ -16,6 +16,6 @@
   },
   "scripts": {
     "start": "tsx src/cli.ts",
-    "test": "tsx --test src/*.test.ts"
+    "test": "tsx --test src/**/*.test.ts"
   }
 }
